force-app/main/default/objects/User/fields/AccountSAPIds__c.field-meta.xml
<CustomField>
    <fullName>AccountSAPIds__c</fullName>
    <description>Field to ensure visibility of accounts on customer portal</description>
    <label>Account SAP Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>