force-app/main/default/objects/User/fields/PenultimateLogin__c.field-meta.xml
<CustomField>
    <fullName>PenultimateLogin__c</fullName>
    <label>Penultimate Login</label>
    <type>DateTime</type>
</CustomField>