force-app/main/default/objects/User/fields/TermsConditionsAccepted__c.field-meta.xml
<CustomField>
    <fullName>TermsConditionsAccepted__c</fullName>  
    <defaultValue>false</defaultValue>
    <description>Field to track whether Portal user has agreed to the Terms&amp;Conditions of the myE-Service Portal. If not, Portal Login Flow is triggered.</description>
    <inlineHelpText>This checkbox indicates, whether a Portal User has accepted the Terms &amp; Conditions of the myE-Service Portal.</inlineHelpText>
    <label>Accept Terms &amp; Conditions</label> 
    <type>Checkbox</type>
</CustomField>