force-app/main/default/objects/User/fields/TermsConditionsAcceptedOn__c.field-meta.xml
<CustomField>
    <fullName>TermsConditionsAcceptedOn__c</fullName>  
    <description>Field to document when T&amp;Cs were accepted by the Portal User</description>
    <inlineHelpText>The date that the Customer Portal User accepted the Terms &amp; Conditions of the myE-Service Portal.</inlineHelpText>
    <label>Terms &amp; Conditions Accepted On</label> 
    <type>DateTime</type>
</CustomField>