force-app/main/default/objects/User/validationRules/checkDHUserName.validationRule-meta.xml
<ValidationRule>
    <fullName>checkDHUserName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
   OR(
      $Permission.DHCustomerPortalAccess,
       Profile.Name = &apos;DH Customer Community Plus Login User&apos;,
       Profile.Name = &apos;DH Customer Restricted Portal Access&apos;
   ),
  NOT(
        ( CONTAINS(Username,Email) || CONTAINS(Username, LEFT(Email, FIND(&apos;@&apos;, Email) - 1) + &apos;.dillinger&apos;) ) &amp;&amp;
        RIGHT(Username, 10) = &apos;.dillinger&apos;
    )
    
)</errorConditionFormula>
    <errorDisplayField>Username</errorDisplayField>
    <errorMessage>For these types of users, you can only specify a User name equal to the Email address +.dillinger, optionally including additional characters between the end of the email address and beginning of .dillinger.</errorMessage>
</ValidationRule>